# CTFr

./: .env  .gitignore  .ignore  Cargo.toml  README.md  build.rs  docker-compose.yml
.cargo/: config.toml
.github/actions/setup-rust-env/: action.yml
.github/workflows/: ci.yml
ctfr/: Cargo.toml
ctfr/src/: main.rs
src/: main.rs  telemetry.rs  utils.rs
src/db/: mod.rs
src/db/sql/: 1_setup.up.sql  2_test_data.up.sql
src/http/: index.rs  mod.rs  staticfiles.rs
src/http/components/: countdown.rs  layout.rs  mod.rs
