cargo-features = ["profile-rustflags", "codegen-backend"]

[package]
name = "ctfr"
version = "0.1.0"
edition = "2021"
description = " Optimized CTFd written with Rust & HTMX "
license = "GPL-3.0"
homepage = "https://github.com/MNThomson/CTFr"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev]
codegen-backend = "cranelift"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[profile.test]
codegen-backend = "llvm"
rustflags = []

[dependencies]
anyhow = { version = "1.0.75" }
axum = { version = "0.6" }
leptos = { version = "0.5.2", features = ["ssr"] }
regex = { version = "1.10.2" }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls"] }
tokio = { version = "1.34", features = ["full"] }

# O11Y
opentelemetry = { version = "0.21.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "metrics"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-opentelemetry = { version = "0.22.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
rusqlite = "0.29.0"
